# quickshell

./: .agentrules  .gitignore  AGENTS.md  AppShell.qml  README.md  \  qs_test.qml  shell.qml
Common/: Animations.qml  Appearance.qml  Paths.qml  Sizes.qml  WidgetState.qml
Common/functions/: AppManager.js
Components/: MaterialSymbol.qml  SvgIcon.qml
JS/: AppManager.js  astro.js
Modules/Bar/: Bar.qml
Modules/DynamicIsland/: DynamicIsland.qml
Modules/HotCorner/: HotCornerDetectorWindow.qml
Modules/Launcher/: AppPage.qml  LauncherWindow.qml  RofiStyle.qml  WallpaperPage.qml  WindowPage.qml
Modules/Lock/: Lock.qml  LockContent.qml  LockContext.qml  LockSurface.qml  LockWarmup.qml
Services/: AudioSpectrum.qml  BluetoothService.qml  Brightness.qml  CavaService.qml  Idle.qml  LockSnapshot.qml  MediaPalette.qml  Network.qml  NotificationManager.qml  QuickToggleConfig.qml  UiPreferences.qml  Volume.qml
Widget/: AudioContent.qml  AudioWidget.qml  NetworkContent.qml  NotificationContent.qml  NotificationCornerWindow.qml  NotificationWidget.qml  QuickSettings.qml  RightSidebar.qml
Widget/audio/: VolumeSlider.qml
Widget/common/: WidgetPanel.qml
Widget/left_sidebar/: DailyAirQualityTrendPane.qml  InfoView.qml  (+20 more)
config/: Appearance.qml  Colorsheme.qml  Sizes.qml  WidgetState.qml
core/: CMakeLists.txt
core/plugin/keyboard/: CMakeLists.txt
core/plugin/keyboard/src/: keyboard_lock_plugin.cpp  keyboard_lock_plugin.h
core/plugin/media/: CMakeLists.txt
core/plugin/media/src/: media_palette_plugin.cpp  media_palette_plugin.h
core/plugin/niri/: CMakeLists.txt
core/plugin/niri/src/: niri_plugin.cpp  niri_plugin.h
scripts/: generate_quickshell_colors.sh  parse_schedule.py  sys_details.py
(+140 files in other folders)
